added javarx implementation to get ItemType